# jbiophys

./: .gitignore  AUDIT_AND_REFACTOR_PLAN.md  AUDIT_NOTEBOOKS_INITIAL.txt  AUDIT_REPO_INITIAL.txt  P0_BASELINE_SUMMARY.md  README.md  VALIDATION_REPORT.md  pyproject.toml
.claude/: CLAUDE.md  jaxfne_refactoring_status.md
.claude/commands/: beta-audit.md  gamma-implement.md  theta-validate.md
.github/workflows/: ci.yml
configs/: spectrolaminar_v1.yaml  tfne_spectrolaminar_correct_ratio.yaml  tfne_spectrolaminar_inverse_ratio.yaml
core/mechanisms/: IPnoise.py  models.py
core/optimizers/: AGSDR.py  GSDR.py  SDR.py
docs/: SCIENTIFIC_GUARDRAILS.md  TFNE_OPERATOR_STATUS.md  tfne_jax_migration_notes.md  tutorial_status.md
docs/audit/: JBIOPHYSIC_V1_1_STABLE_VALIDATION_REPORT.md  P1_DECISIONS.md  spectrolaminar_ratio_pairing_audit.md
examples/: plot_laminar_circuit_3d.py  run_lap_tfne_izhikevich_spontaneous.py  tfne_izhikevich_laminar_ei100.py  v036_100neuron_ei_population.py
scripts/: render_spectrolaminar_figures.py  run_spectrolaminar_suite.py
src/jbiophysic/: __init__.py  conditions.py  (+3 more)
tests/: conftest.py  test_analysis.py  test_cells.py  test_edge_backend.py  test_import_smoke.py  test_jaxfne_advanced.py  test_jaxfne_integration.py  test_objectives.py  test_optim_network_pipeline.py  test_simplified_api_imports.py  test_simplified_api_ops.py  test_tfne_fieldsolution.py  test_tfne_p0_invariants.py  test_tfne_sources.py  test_tfne_tensors_fields.py  test_units_chapter1.py  test_viz_jvis.py
tutorials/: colab_jaxfne_computational_biophysics_tutorial.ipynb
(+103 files in other folders)
